--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: '*.properties'
-    translation: /locale_%locale_with_underscore%.properties
+    translation: src/main/resources/locale_%locale_with_underscore%.properties
