--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: '*.properties'
+  - source: locale_en_US.properties
     translation: /locale_%locale_with_underscore%.properties
